<resources>
    <string name="app_name">TestShop</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="invalid_email">Invalid Email address</string>
    <string name="home">Home</string>
    <string name="like">Like</string>
    <string name="shop">Shop</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="change_photo">Change photo</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="log_out">Log out</string>
    <string name="trade_by_bata">Trade by bata</string>
    <string name="bata">bata</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="location">Location</string>
    <string name="brands">Brands</string>

</resources>