<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_ic"
        android:title="@string/home"
        />
    <item
        android:id="@+id/likeFragment"
        android:icon="@drawable/like_ic"
        android:title="@string/like"
        />
    <item
        android:id="@+id/shopFragment"
        android:icon="@drawable/shop_ic"
        android:title="@string/shop"
        />
    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/message_ic"
        android:title="@string/message"
        />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_ic"
        android:title="@string/profile"
        />


</menu>